--- a/architecte-devops.html
+++ b/architecte-devops.html
@@ -124,7 +124,7 @@
                 </div>
                 <div class="rate-info">
                     <h3>Taux Journalier Moyen (TJM)</h3>
-                    <p class="rate">600 é 750 ‚jour HT</p>
+                    <p class="rate">600 à 750 ‚jour HT</p>
                 </div>
                 <div class="contact-section">
                     <h3>Intéressé(e) par cette opportunità?</h3>
