--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <li><a href="architecte-securite.html">5.1 Architecte Sécurité</a></li>
                             <li><a href="specialiste-iam.html">5.2 Spécialiste IAM (Gestion des Identités et des
                                     accé¨s)</a></li>
-                            <li><a href="responsable-continuite.html">5.3 Responsable de la continuitàd'activités</a>
+                            <li><a href="responsable-continuite.html">5.3 Responsable de la continuité d'activités</a>
                             </li>
                         </ul>
                     </div>
