--- a/responsable-continuite.html
+++ b/responsable-continuite.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="fr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>5.3 Responsable de la continuitàd'activités - FEA</title>
+    <title>5.3 Responsable de la continuité d'activités - FEA</title>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 
@@ -30,10 +30,10 @@
         <section class="profile-header-section">
             <div class="container">
                 <div class="profile-header">
-                    <h1>5.3 Responsable de la continuitàd'activités</h1> <span class="badge available">Disponible</span>
+                    <h1>5.3 Responsable de la continuité d'activités</h1> <span class="badge available">Disponible</span>
                 </div>
                 <div class="breadcrumb"> <a href="index.html">Index</a> †’ <a href="index.html#securite">5. securité &
-                        Gouvernance</a> †’ <span>5.3 Responsable de la continuitàd'activités</span> </div>
+                        Gouvernance</a> †’ <span>5.3 Responsable de la continuité d'activités</span> </div>
             </div>
         </section> <!-- Section Évaluation Technique -->
         <section id="evaluation" class="section">
@@ -41,9 +41,9 @@
                 <h2>Évaluation Technique</h2>
                 <div class="competence-domain">
                     <h3>Stratégie & gouvernance BC / BCM</h3>
-                    <p>Définition de la politique de continuitàd'activité, des principes directeurs, du cadre de
-                        gouvernance. Alignement entre la stratégie métier et la continuitàd'activité. Pilotage de la
-                        mise en place d'un systé¨me de management de la continuità(BCMS) selon la norme ISO 22301.</p>
+                    <p>Définition de la politique de continuité d'activité, des principes directeurs, du cadre de
+                        gouvernance. Alignement entre la stratégie métier et la continuité d'activité. Pilotage de la
+                        mise en place d'un systé¨me de management de la continuité (BCMS) selon la norme ISO 22301.</p>
                 </div>
                 <div class="competence-domain">
                     <h3>Analyse de risque & BIA</h3>
@@ -52,8 +52,8 @@
                         d'un incident.</p>
                 </div>
                 <div class="competence-domain">
-                    <h3>Plans de continuità& reprise d'activité</h3>
-                    <p>élaboration de plans de continuitàet de reprise (Recovery) couvrant les aspects IT / métiers.
+                    <h3>Plans de continuité & reprise d'activité</h3>
+                    <p>élaboration de plans de continuité et de reprise (Recovery) couvrant les aspects IT / métiers.
                         Définition de niveaux de service (RTO, RPO). Conception de procédures de secours, plans
                         d'urgence, scénarios d'escalade.</p>
                 </div>
@@ -91,18 +91,18 @@
             <div class="container">
                 <h2>Fiche de Poste pour Agent de talent</h2>
                 <div class="mission-description">
-                    <h3>Vous étes Responsable de Continuitàd'activités SI et vous recherchez une mission en freelance ?
+                    <h3>Vous étes Responsable de continuité d'activités SI et vous recherchez une mission en freelance ?
                     </h3>
                     <p>Nous avons le projet qu'il vous faut pour l'un de nos clients basés é Niort dans le secteur des
                         assurances.</p>
                 </div>
                 <div class="mission-expectations">
                     <h3>Ce que l'on attend de la personne (type de mission)</h3>
-                    <p>Le Responsable de la continuitàd'activités est chargàde :</p>
+                    <p>Le Responsable de la continuité d'activités est chargàde :</p>
                     <ul>
-                        <li>Définir la stratégie et la gouvernance de la continuità(BC/BCM) selon ISO 22301</li>
+                        <li>Définir la stratégie et la gouvernance de la continuité (BC/BCM) selon ISO 22301</li>
                         <li>Réaliser des analyses d'impact métier (BIA) et évaluer les risques</li>
-                        <li>élaborer les plans de continuitàet de reprise d'actività(RTO, RPO, plans d'urgence)</li>
+                        <li>élaborer les plans de continuité et de reprise d'actività(RTO, RPO, plans d'urgence)</li>
                         <li>Organiser des tests, exercices et formations pour valider les plans et sensibiliser les
                             équipes</li>
                         <li>Coordonner les cellules de crise, gérer les incidents et la reprise des activités</li>
@@ -115,7 +115,7 @@
                     <p>Un(e) Responsable BC/DR avec :</p>
                     <ul>
                         <li>Une formation Bac+5 en management, sécurité, ingénierie ou gestion des risques</li>
-                        <li>Une expérience significative (5 é 10 ans) en continuitàd'activité, gestion de crise ou BCM
+                        <li>Une expérience significative (5 é 10 ans) en continuité d'activité, gestion de crise ou BCM
                         </li>
                         <li>Une maîtrise des normes et référentiels : ISO 22301, CBCP, BCM standards</li>
                         <li>Des compétences en systé¨mes d'information, infrastructure, et interconnexion IT/métier</li>
