--- a/sre.html
+++ b/sre.html
@@ -43,7 +43,7 @@
                     <h3>Fiabilità& résilience des systé¨mes</h3>
                     <p>Définition de SLO / SLA / SLI. Gestion du "budget d'erreur" et trade-offs disponibilità/
                         rapidité. Conception d'architectures tolérantes aux pannes, redondance, basculement. Plan de
-                        reprise / continuitàde service.</p>
+                        reprise / continuité de service.</p>
                 </div>
                 <div class="competence-domain">
                     <h3>Surveillance, observabilité & alerting</h3>
