--- a/architecte-cloud.html
+++ b/architecte-cloud.html
@@ -58,7 +58,7 @@
                 <div class="competence-domain">
                     <h3>Sé©curité©, conformité© & gouvernance</h3>
                     <p>Sé©curité© by design : IAM, chiffrement, gestion des secrets. Audits sé©curité©, conformité©
-                        RGPD, normes cloud. Gestion des accé¨s & segmentation. Surveillance & alerting de la sé©curité©
+                        RGPD, normes cloud. Gestion des accés  & segmentation. Surveillance & alerting de la sé©curité©
                         cloud.</p>
                 </div>
                 <div class="competence-domain">
@@ -118,7 +118,7 @@
                             networking cloud</li>
                         <li>Des compé©tences en Infrastructure as Code (Terraform, CloudFormation, Ansible), scripting
                             (Python, Bash)</li>
-                        <li>Une expertise en sé©curité© cloud : IAM, chiffrement, gestion des accé¨s, conformité© RGPD
+                        <li>Une expertise en sé©curité© cloud : IAM, chiffrement, gestion des accés , conformité© RGPD
                         </li>
                         <li>Des qualité©s personnelles : autonomie, esprit de Synthèse, force de proposition,
                             leadership</li>
