--- a/architecte-devops.html
+++ b/architecte-devops.html
@@ -74,7 +74,7 @@
                 <div class="competence-domain">
                     <h3>securité & conformitàDevSecOps</h3>
                     <p>Intégrer la securité dé¨s le pipeline (SAST, DAST, checks). Gestion des secrets, IAM, chiffrement.
-                        Contré´le des accé¨s, audits, conformità(RGPD, etc.).</p>
+                        Contré´le des accés , audits, conformità(RGPD, etc.).</p>
                 </div>
                 <div class="competence-domain">
                     <h3>Travail collaboratif & culture DevOps</h3>
