--- a/architecte-infrastructure.html
+++ b/architecte-infrastructure.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="competence-domain">
                     <h3>securité infrastructure</h3>
-                    <p>Sécurisation des accé¨s, segmentation réseau. Chiffrement des données au repos / en transit.
+                    <p>Sécurisation des accés , segmentation réseau. Chiffrement des données au repos / en transit.
                         Gestion des certificats, IDS / IPS, pare-feu. Continuité, plans de reprise d'infrastructure.</p>
                 </div>
                 <div class="competence-domain">
