--- a/architecte-observabilite.html
+++ b/architecte-observabilite.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="competence-domain">
                     <h3>securité & conformitàde la télémétrie</h3>
-                    <p>Chiffrement des pipelines, gestion des accé¨s (IAM). Masquage des données sensibles dans les logs
+                    <p>Chiffrement des pipelines, gestion des accés  (IAM). Masquage des données sensibles dans les logs
                         et traces. Respect des contraintes légales ou réglementaires (RGPD, confidentialité).</p>
                 </div>
                 <div class="competence-domain">
