--- a/architecte-poste-travail.html
+++ b/architecte-poste-travail.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="competence-domain">
                     <h3>securité & conformitàworkplace</h3>
-                    <p>Mise en Å“uvre de sécurités sur les postes (antivirus, EDR, MDM / EMM). Gestion des accé¨s,
+                    <p>Mise en Å“uvre de sécurités sur les postes (antivirus, EDR, MDM / EMM). Gestion des accés ,
                         chiffrement des données sur poste. ConformitàRGPD, politiques de protection des données locales.
                     </p>
                 </div>
