--- a/architecte-securite.html
+++ b/architecte-securite.html
@@ -48,7 +48,7 @@
                 <div class="competence-domain">
                     <h3>Architecture de securité & conception</h3>
                     <p>Conception d'architectures sécurisées (niveaux réseau, applicatif, données, cloud). Segmentation,
-                        zones de securité (DMZ, zones internes). Chiffrement, PKI, VPN, contré´le d'accé¨s, IAM (RBAC,
+                        zones de securité (DMZ, zones internes). Chiffrement, PKI, VPN, contré´le d'accés , IAM (RBAC,
                         ABAC).</p>
                 </div>
                 <div class="competence-domain">
