--- a/architecte-solution-ia.html
+++ b/architecte-solution-ia.html
@@ -76,7 +76,7 @@
                 <div class="competence-domain">
                     <h3>Sécurité, éthique & conformité</h3>
                     <p>Gestion des données sensibles (chiffrement, anonymisation). Respect du RGPD et des principes de
-                        confidentialité. Transparence, explicabilitàdes modé¨les, biais. Contré´le d'accé¨s, IAM pour
+                        confidentialité. Transparence, explicabilitàdes modé¨les, biais. Contré´le d'accés , IAM pour
                         l'IA.</p>
                 </div>
                 <div class="competence-domain">
