--- a/expert-integration.html
+++ b/expert-integration.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="competence-domain">
                     <h3>securité & gouvernance</h3>
-                    <p>Sécurisation des échanges (authentification, chiffrement, JWT, OAuth, TLS). Contré´le d'accé¨s,
+                    <p>Sécurisation des échanges (authentification, chiffrement, JWT, OAuth, TLS). Contré´le d'accés ,
                         gestion des droits, audit des échanges. conformité et aux  normes (RGPD, securité applicative).</p>
                 </div>
             </div>
