--- a/ingenieur-devops.html
+++ b/ingenieur-devops.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="competence-domain">
                     <h3>securité & conformité</h3>
-                    <p>Intégration des aspects de securité (chiffrement, TLS/HTTPS, contré´le d'accé¨s). Vulnérabilité,
+                    <p>Intégration des aspects de securité (chiffrement, TLS/HTTPS, contré´le d'accés ). Vulnérabilité,
                         bonnes pratiques, conformité et aux  normes. Anticipation de l'obsolescence et recommandations de
                         sécurité.</p>
                 </div>
@@ -104,7 +104,7 @@
                         </li>
                         <li>Collaborer avec les développeurs pour intégrer les outils DevOps et automatiser les
                             livraisons</li>
-                        <li>Intégrer les aspects securité dans les processus (chiffrement, contré´le d'accé¨s,
+                        <li>Intégrer les aspects securité dans les processus (chiffrement, contré´le d'accés ,
                             conformité)</li>
                         <li>Participer aux comités de version, anticiper les risques et garantir la cohérence des
                             environnements</li>
