--- a/ingenieur-iam-workplace.html
+++ b/ingenieur-iam-workplace.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="fr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>8.2 Ingénieur IAM (Identità& accé¨s) Poste de travail - FEA</title>
+    <title>8.2 Ingénieur IAM (Identità& accés ) Poste de travail - FEA</title>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 
@@ -30,11 +30,11 @@
         <section class="profile-header-section">
             <div class="container">
                 <div class="profile-header">
-                    <h1>8.2 Ingénieur IAM (Identità& accé¨s) Poste de travail</h1> <span
+                    <h1>8.2 Ingénieur IAM (Identità& accés ) Poste de travail</h1> <span
                         class="badge available">Disponible</span>
                 </div>
                 <div class="breadcrumb"> <a href="index.html">Index</a> †’ <a href="index.html#workplace">8. Poste de
-                        travail (Digital Workplace)</a> †’ <span>8.2 Ingénieur IAM (Identità& accé¨s) Poste de
+                        travail (Digital Workplace)</a> †’ <span>8.2 Ingénieur IAM (Identità& accés ) Poste de
                         travail</span> </div>
             </div>
         </section> <!-- Section Évaluation Technique -->
@@ -43,9 +43,9 @@
                 <h2>Évaluation Technique</h2>
                 <div class="competence-domain">
                     <h3>Stratégie & gouvernance IAM</h3>
-                    <p>Participation é la définition de la politique IAM (principes d'accé¨s, ré´les, gouvernance).
-                        Définir les processus de demande / approbation / révocation d'accé¨s. veiller a  la
-                        conformità(audit des accé¨s, revues périodiques).</p>
+                    <p>Participation é la définition de la politique IAM (principes d'accés , ré´les, gouvernance).
+                        Définir les processus de demande / approbation / révocation d'accés . veiller a  la
+                        conformità(audit des accés , revues périodiques).</p>
                 </div>
                 <div class="competence-domain">
                     <h3>Cycle de vie des identités & gestion des droits</h3>
@@ -66,7 +66,7 @@
                 <div class="competence-domain">
                     <h3>securité & conformité</h3>
                     <p>Authentification forte (MFA, biométrie). Chiffrement des données d'identité. Traé§abilitàdes
-                        actions (logs). Respect du RGPD / contré´le des accé¨s.</p>
+                        actions (logs). Respect du RGPD / contré´le des accés .</p>
                 </div>
                 <div class="competence-domain">
                     <h3>Opérations & support IAM</h3>
@@ -89,7 +89,7 @@
             <div class="container">
                 <h2>Fiche de Poste pour Agent de talent</h2>
                 <div class="mission-description">
-                    <h3>Vous étes Ingénieur Identitàet Accé¨s (Poste de travail) SI et vous recherchez une mission en
+                    <h3>Vous étes Ingénieur Identitàet accés  (Poste de travail) SI et vous recherchez une mission en
                         freelance ?</h3>
                     <p>Nous avons le projet qu'il vous faut pour l'un de nos clients basés é Niort dans le secteur des
                         assurances.</p>
@@ -98,13 +98,13 @@
                     <h3>Ce que l'on attend de la personne (missions)</h3>
                     <p>L'ingénieur IAM est chargàde :</p>
                     <ul>
-                        <li>Définir et mettre en Å“uvre la stratégie IAM : politiques d'accé¨s, gouvernance, processus
+                        <li>Définir et mettre en Å“uvre la stratégie IAM : politiques d'accés , gouvernance, processus
                             de demande/approbation/révocation, conformitàet audits.</li>
                         <li>Gérer le cycle de vie des identités : provisioning automatique, gestion des droits (RBAC,
                             ABAC), audits et séparation des té¢ches (SoD).</li>
                         <li>Intégrer et exploiter les plateformes IAM : solutions comme SailPoint, ForgeRock, Okta,
                             Microsoft Entra, avec AD/Azure AD/LDAP.</li>
-                        <li>Assurer la securité des accé¨s : MFA, chiffrement, traé§abilité, conformitàRGPD.</li>
+                        <li>Assurer la securité des accés  : MFA, chiffrement, traé§abilité, conformitàRGPD.</li>
                         <li>Superviser et maintenir les opérations IAM : support, mises é jour, correctifs, évolutions.
                         </li>
                         <li>Automatiser les processus IAM : scripting, Infrastructure as Code, CI/CD.</li>
@@ -116,7 +116,7 @@
                     <h3>Ce que la personne est (compétences)</h3>
                     <p>Le profil recherchàest :</p>
                     <ul>
-                        <li>Ingénieur expérimentà(3 é 5 ans ou plus) en IAM ou securité des accé¨s.</li>
+                        <li>Ingénieur expérimentà(3 é 5 ans ou plus) en IAM ou securité des accés .</li>
                         <li>Diplômé Bac+5 en informatique ou cybersécurité.</li>
                         <li>maîtrise des solutions IAM / IGA et des protocoles d'authentification (OAuth2, SAML, OpenID
                             Connect, SCIM).</li>
