--- a/ingenieur-mlops.html
+++ b/ingenieur-mlops.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="competence-domain">
                     <h3>securité & conformitàML / IA</h3>
-                    <p>securité des modé¨les et des données (chiffrement, accé¨s contré´lé). Respect de la
+                    <p>securité des modé¨les et des données (chiffrement, accés  contré´lé). Respect de la
                         confidentialité, RGPD, anonymisation. Auditabilitàet traé§abilitàdes modé¨les. Robustesse
                         (adversarial, validation).</p>
                 </div>
