--- a/ingenieur-securite.html
+++ b/ingenieur-securite.html
@@ -49,7 +49,7 @@
                     <h3>Architecture & securité des systé¨mes</h3>
                     <p>securité des architectures (réseau, applicative, infrastructure). Protection des endpoints,
                         segmentation réseau, firewalls, IDS/IPS. securité des API, chiffrement, gestion des secrets.
-                        Gestion de l'identità& des accé¨s (IAM, SSO, MFA).</p>
+                        Gestion de l'identità& des accés  (IAM, SSO, MFA).</p>
                 </div>
                 <div class="competence-domain">
                     <h3>Tests, audits & pentesting</h3>
@@ -108,7 +108,7 @@
                         <li>Une expérience confirmée (3 é 5 ans ou plus) en securité informatique</li>
                         <li>Une formation Bac+5 en securité ou informatique</li>
                         <li>Une maîtrise des normes et référentiels : ISO 27001, NIST, RGPD, NIS2</li>
-                        <li>Des compétences en architecture sécurisée, chiffrement, gestion des accé¨s, IAM, SSO, MFA
+                        <li>Des compétences en architecture sécurisée, chiffrement, gestion des accés , IAM, SSO, MFA
                         </li>
                         <li>Une expertise en tests de sécurité, outils de scan (Nessus, OpenVAS), remédiation</li>
                         <li>Une Capacitétravailler dans des environnements réglementés (ex : assurance)</li>
