--- a/specialiste-iam.html
+++ b/specialiste-iam.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="fr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>5.2 Spécialiste IAM (Gestion des Identités et des accé¨s) - FEA</title>
+    <title>5.2 Spécialiste IAM (Gestion des Identités et des accés ) - FEA</title>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 
@@ -30,11 +30,11 @@
         <section class="profile-header-section">
             <div class="container">
                 <div class="profile-header">
-                    <h1>5.2 Spécialiste IAM (Gestion des Identités et des accé¨s)</h1> <span
+                    <h1>5.2 Spécialiste IAM (Gestion des Identités et des accés )</h1> <span
                         class="badge available">Disponible</span>
                 </div>
                 <div class="breadcrumb"> <a href="index.html">Index</a> †’ <a href="index.html#securite">5. securité &
-                        Gouvernance</a> †’ <span>5.2 Spécialiste IAM (Gestion des Identités et des accé¨s)</span> </div>
+                        Gouvernance</a> †’ <span>5.2 Spécialiste IAM (Gestion des Identités et des accés )</span> </div>
             </div>
         </section> <!-- Section Évaluation Technique -->
         <section id="evaluation" class="section">
@@ -42,14 +42,14 @@
                 <h2>Évaluation Technique</h2>
                 <div class="competence-domain">
                     <h3>Stratégie & gouvernance IAM</h3>
-                    <p>Définir la stratégie IAM de l'entreprise (politiques d'accé¨s, ré´les, principes de moindre
+                    <p>Définir la stratégie IAM de l'entreprise (politiques d'accés , ré´les, principes de moindre
                         privilé¨ge). Gouvernance des identités, droits & habilitations. Participation é la définition
-                        des politiques de sécurité, chartes d'accé¨s.</p>
+                        des politiques de sécurité, chartes d'accés .</p>
                 </div>
                 <div class="competence-domain">
                     <h3>Cycle de vie des identités & gestion des droits</h3>
                     <p>Gestion du cycle de vie (provisioning, modifications, révocation). Gestion des droits /
-                        habilitations (ré´les, profil, approbations). Révisions périodiques des droits, audits d'accé¨s.
+                        habilitations (ré´les, profil, approbations). Révisions périodiques des droits, audits d'accés .
                         Séparation des fonctions (SoD), gestion des exceptions.</p>
                 </div>
                 <div class="competence-domain">
@@ -68,13 +68,13 @@
                 <div class="competence-domain">
                     <h3>securité & conformité</h3>
                     <p>Authentification forte (MFA, biométrie, PKI). Chiffrement des données & sécurisation des
-                        communications. Contré´le d'accé¨s (RBAC, ABAC). Conformitàréglementaire (RGPD, normes secteur).
+                        communications. Contré´le d'accés  (RBAC, ABAC). Conformitàréglementaire (RGPD, normes secteur).
                     </p>
                 </div>
                 <div class="competence-domain">
                     <h3>Opérations & support IAM</h3>
                     <p>Déploiement, maintenance, supervision des services IAM. Support des incidents, analyses
-                        d'anomalies. Surveillance des accé¨s, journaux, traé§abilité. Tests, mises é jour, correctifs et
+                        d'anomalies. Surveillance des accés , journaux, traé§abilité. Tests, mises é jour, correctifs et
                         évolutions.</p>
                 </div>
                 <div class="competence-domain">
@@ -95,7 +95,7 @@
             <div class="container">
                 <h2>Fiche de Poste pour Agent de talent</h2>
                 <div class="mission-description">
-                    <h3>Vous étes Spécialiste IAM (Gestion des identités et accé¨s) SI et vous recherchez une mission en
+                    <h3>Vous étes Spécialiste IAM (Gestion des identités et accés ) SI et vous recherchez une mission en
                         freelance ?</h3>
                     <p>Nous avons le projet qu'il vous faut pour l'un de nos clients basés é Niort dans le secteur des
                         assurances.</p>
@@ -104,7 +104,7 @@
                     <h3>Ce que l'on attend de la personne (type de mission)</h3>
                     <p>Le Spécialiste IAM est chargàde :</p>
                     <ul>
-                        <li>Définir la stratégie IAM : politiques d'accé¨s, ré´les, principes de moindre privilé¨ge</li>
+                        <li>Définir la stratégie IAM : politiques d'accés , ré´les, principes de moindre privilé¨ge</li>
                         <li>Gérer le cycle de vie des identités : provisioning, modification, révocation, audits</li>
                         <li>Déployer et maintenir les solutions IAM / IGA (SailPoint, ForgeRock, Okta, Azure AD€¦)</li>
                         <li>Assurer l'intégration avec les systé¨mes internes et externes via API, annuaires,
@@ -119,9 +119,9 @@
                     <p>Un(e) Spécialiste IAM avec :</p>
                     <ul>
                         <li>Une formation Bac+5 en informatique ou cybersécurité</li>
-                        <li>Une expérience confirmée (3 é 5 ans minimum) en IAM ou gestion des accé¨s</li>
+                        <li>Une expérience confirmée (3 é 5 ans minimum) en IAM ou gestion des accés </li>
                         <li>Une maîtrise des outils IAM / IGA et des protocoles (OAuth2, SAML, SCIM€¦)</li>
-                        <li>Des compétences en securité des accé¨s, gestion des comptes é privilé¨ges (PAM),
+                        <li>Des compétences en securité des accés , gestion des comptes é privilé¨ges (PAM),
                             automatisation</li>
                         <li>Des qualités personnelles : rigueur, communication claire, capacitàd'arbitrage,
                             sensibilisation des utilisateurs</li>
