--- a/sre.html
+++ b/sre.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="competence-domain">
                     <h3>securité opérationnelle</h3>
-                    <p>securité by design : IAM, chiffrement, contré´le d'accé¨s. Audits de sécurité, remédiation.
+                    <p>securité by design : IAM, chiffrement, contré´le d'accés . Audits de sécurité, remédiation.
                         conformité et aux  normes / réglementations (RGPD, etc.).</p>
                 </div>
                 <div class="competence-domain">
