--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <ul class="index-list">
                             <li><a href="architecte-securite.html">5.1 Architecte Sécurité</a></li>
                             <li><a href="specialiste-iam.html">5.2 Spécialiste IAM (Gestion des Identités et des
-                                    accé¨s)</a></li>
+                                    accés )</a></li>
                             <li><a href="responsable-continuite.html">5.3 Responsable de la continuité d'activités</a>
                             </li>
                         </ul>
@@ -109,7 +109,7 @@
                         <ul class="index-list">
                             <li><a href="architecte-poste-travail.html">8.1 Architecte/Ingénieur poste de travail**</a>
                             </li>
-                            <li><a href="ingenieur-iam-workplace.html">8.2 Ingénieur IAM (Identità& accé¨s) Poste de
+                            <li><a href="ingenieur-iam-workplace.html">8.2 Ingénieur IAM (Identità& accés ) Poste de
                                     travail</a></li>
                         </ul>
                     </div>
