--- a/ingenieur-data.html
+++ b/ingenieur-data.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="competence-domain">
                     <h3>securité & gouvernance des données</h3>
-                    <p>Masquage des données sensibles. Gestion des accé¨s / droits aux données (IAM).
+                    <p>Masquage des données sensibles. Gestion des accés  / droits aux données (IAM).
                         Conformitàréglementaire (RGPD).</p>
                 </div>
                 <div class="competence-domain">
