--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <ul class="index-list">
                             <li><a href="architecte-poste-travail.html">8.1 Architecte/Ingénieur poste de travail**</a>
                             </li>
-                            <li><a href="ingenieur-iam-workplace.html">8.2 Ingénieur IAM (Identità& accés ) Poste de
+                            <li><a href="ingenieur-iam-workplace.html">8.2 Ingénieur IAM (Identité & accés ) Poste de
                                     travail</a></li>
                         </ul>
                     </div>
