--- a/ingenieur-iam-workplace.html
+++ b/ingenieur-iam-workplace.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="fr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>8.2 Ingénieur IAM (Identità& accés ) Poste de travail - FEA</title>
+    <title>8.2 Ingénieur IAM (Identité & accés ) Poste de travail - FEA</title>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 
@@ -30,11 +30,11 @@
         <section class="profile-header-section">
             <div class="container">
                 <div class="profile-header">
-                    <h1>8.2 Ingénieur IAM (Identità& accés ) Poste de travail</h1> <span
+                    <h1>8.2 Ingénieur IAM (Identité & accés ) Poste de travail</h1> <span
                         class="badge available">Disponible</span>
                 </div>
                 <div class="breadcrumb"> <a href="index.html">Index</a> †’ <a href="index.html#workplace">8. Poste de
-                        travail (Digital Workplace)</a> †’ <span>8.2 Ingénieur IAM (Identità& accés ) Poste de
+                        travail (Digital Workplace)</a> †’ <span>8.2 Ingénieur IAM (Identité & accés ) Poste de
                         travail</span> </div>
             </div>
         </section> <!-- Section Évaluation Technique -->
@@ -89,7 +89,7 @@
             <div class="container">
                 <h2>Fiche de Poste pour Agent de talent</h2>
                 <div class="mission-description">
-                    <h3>Vous étes Ingénieur Identitàet accés  (Poste de travail) SI et vous recherchez une mission en
+                    <h3>Vous étes Ingénieur Identité et accés  (Poste de travail) SI et vous recherchez une mission en
                         freelance ?</h3>
                     <p>Nous avons le projet qu'il vous faut pour l'un de nos clients basés é Niort dans le secteur des
                         assurances.</p>
