--- a/ingenieur-securite.html
+++ b/ingenieur-securite.html
@@ -49,7 +49,7 @@
                     <h3>Architecture & securité des systé¨mes</h3>
                     <p>securité des architectures (réseau, applicative, infrastructure). Protection des endpoints,
                         segmentation réseau, firewalls, IDS/IPS. securité des API, chiffrement, gestion des secrets.
-                        Gestion de l'identità& des accés  (IAM, SSO, MFA).</p>
+                        Gestion de l'Identité & des accés  (IAM, SSO, MFA).</p>
                 </div>
                 <div class="competence-domain">
                     <h3>Tests, audits & pentesting</h3>
